--- a/kubernetes-security/task01/1-bob.yaml
+++ b/kubernetes-security/task01/1-bob.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: Bob
+  name: bob
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -10,7 +10,7 @@ metadata:
   name: admin-bob
 subjects:
   - kind: ServiceAccount
-    name: Bob
+    name: bob
     namespace: default
 roleRef:
   kind: ClusterRole
