--- a/kubernetes-volumes/secret.yaml
+++ b/kubernetes-volumes/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: minio
 type: kubernetes.io/basic-auth
 stringData:
-  username: admin
-  password: Ad9bjP8X
+  username: minio
+  password: minio123
