add new branch Network

--- a/kubernetes-intro/web-pod.yaml
+++ b/kubernetes-intro/web-pod.yaml
@@ -1,7 +1,7 @@
 kind: Pod 
 apiVersion: v1 
 metadata:
-  name: web-deweaty
+  name: web-dweaty
 spec:
   volumes:
     - name: app
@@ -12,6 +12,12 @@ spec:
       volumeMounts:
         - name: app
           mountPath: /app
+      readinessProbe:
+        httpGet:
+          path: /index.html
+          port: 80
+      livenessProbe:
+        tcpSocket: { port: 8000 }
   initContainers:
     - name: init-web
       image: busybox:1.28
