--- a/kubernetes-networks/dashboard/dashboard-ingress.yaml
+++ b/kubernetes-networks/dashboard/dashboard-ingress.yaml
@@ -1,18 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dashboard
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
   namespace: kubernetes-dashboard
 spec:
   rules:
   - http:
       paths:
-      - backend:
-          serviceName: kubernetes-dashboard
-          servicePort: 443
-        path: /dashboard
+      - path: /dashboard
         pathType: Prefix
-  
+        backend:
+          service:
+            name: kubernetes-dashboard
+            port: 
+              number: 443
