--- a/kubernetes-logging/prometheus.values.yaml
+++ b/kubernetes-logging/prometheus.values.yaml
@@ -9,11 +9,11 @@ prometheus:
       }
       path: /
       hosts:
-        - prometheus.35.194.23.119.nip.io
+        - prometheus.34.123.12.62.nip.io
       tls:
-        - secretName: prometheus.35.194.23.119.nip.io
+        - secretName: prometheus.34.123.12.62.nip.io
           hosts:
-            - prometheus.35.194.23.119.nip.io
+            - prometheus.34.123.12.62.nip.io
   prometheusSpec:
     tolerations:
     - key: node-role
@@ -21,6 +21,21 @@ prometheus:
       value: infra
       effect: NoSchedule
     serviceMonitorSelectorNilUsesHelmValues: false
+
+alertmanager:
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    hosts:
+      - alertmanager.34.123.12.62.nip.io
+    paths:
+      - /
+    tls:
+      - secretName: prometheus.34.123.12.62.nip.io
+        hosts:
+          - prometheus.34.123.12.62.nip.io
+
 grafana:
   ingress:
       enabled: true
@@ -32,8 +47,15 @@ grafana:
       }
       path: /
       hosts:
-        - grafana.35.194.23.119.nip.io
+        - grafana.34.123.12.62.nip.io
       tls:
-        - secretName: grafana.35.194.23.119.nip.io
+        - secretName: grafana.34.123.12.62.nip.io
           hosts:
-            - grafana.35.194.23.119.nip.io
+            - grafana.34.123.12.62.nip.io
+      additionalDataSources:
+        - name: Loki
+          type: loki
+          access: proxy
+          url: http://loki:3100
+          jsonData:
+            maxLines: 1000
